opam-version: "2.0"
synopsis: "OCaml Static Site Generator"
maintainer: ["Satoru Kawahara <s1311350@gmail.com>"]
authors: ["Satoru Kawahara <s1311350@gmail.com>"]
license: "MIT"
homepage: "https://github.com/Nymphium/ossr"
bug-reports: "https://github.com/Nymphium/ossr/issues"
dev-repo: "git+https://github.com/Nymphium/ossr.git"
depends: [
  "dune" {>= "3.17.0"}
  "eio"
  "eio_main"
  "cohttp-eio" {>= "6.0.0"}
  "logs"
  "magic-mime"
  "cmarkit"
  "liquid_ml"
  "yaml"
  "ppx_deriving"
  "ppx_inline_test" {with-test}
  "ppx_assert" {with-test}
]
